Switch ffmpeg to LGPL version, add text movement and re-editing features

--- a/index.html
+++ b/index.html
@@ -2505,5 +2505,12 @@
   </script>
     <!-- 從外部載入違規項目選單 -->
   <script src="./violation_list.js"></script>
+  
+  <footer style="font-size: 12px; opacity: 0.7; text-align:center; margin-top: 40px;">
+    本網站使用了 FFmpeg（LGPL v2.1+）之 WebAssembly 核心。
+    FFmpeg 原始碼可從官方取得： 
+    <a href="https://github.com/FFmpeg/FFmpeg" target="_blank">https://github.com/FFmpeg/FFmpeg</a><br>
+    本網站未修改 FFmpeg 核心，僅透過 WebAssembly 作為函式庫使用。
+  </footer>
 </body>
 </html>
